# TPS-API-Reference-Implementations

./: CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TPS MIT Project Charter & Rules.docx  deny.toml
rot13_connector/: CMakeLists.txt  Cargo.toml  README.md
rot13_connector/src/: c_api.rs  lib.rs  service.rs
rot13_service/: CMakeLists.txt  Cargo.toml  README.md
rot13_service/src/: lib.rs
rot13_service/tests/: rot13_test.rs
rs_cddl/: Cargo.toml  LICENSE
rs_cddl/src/: lib.rs
rs_cddl/src/cddl/: hexfloat.rs  parse.rs
rs_cddl/test/: cbor_token.cddl  claim_set.cddl  cose_key.cddl  prelude.cddl  reputon1.cddl
rs_minicbor/: Cargo.toml  README.md
rs_minicbor/examples/: decode.rs
rs_minicbor/examples/trivial_cose/: main.rs
rs_minicbor/src/: array.rs  ast.rs  cbor_diag.rs  constants.rs  decode.rs  decode_combinators.rs  encode.rs  error.rs  lib.rs  map.rs  tag.rs  utils.rs
rs_minicbor/tests/: decoder.rs  encoder.rs
tps_cddl/: Cargo.toml  LICENSE  README.md
tps_cddl/src/: cddl.rs  lib.rs
tps_cddl/src/cddl/: ast.rs  hexfloat.rs  parse.rs
tps_cddl/test/: cbor_token.cddl  claim_set.cddl  cose_key.cddl  generic_test.cddl  prelude.cddl  reputon1.cddl  reputon2.cddl
tps_client_api/: Cargo.toml  README.md
tps_client_api/src/: connector.rs  lib.rs  services.rs
tps_client_c/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  tpsc_client_api.h
tps_client_c/c_example/: CMakeLists.txt  c_example.c
tps_client_c/src/: lib.rs
tps_client_common/: Cargo.toml  README.md
tps_client_common/src/: lib.rs
tps_connector/: Cargo.toml  build.rs  cbindgen.toml  tpsc_connector_api.h
tps_connector/src/: lib.rs
tps_error/: Cargo.toml
tps_error/src/: lib.rs
tps_minicbor/: Cargo.toml  LICENSE.txt  README.md
tps_minicbor/examples/: decode.rs
tps_minicbor/examples/trivial_cose/: main.rs
tps_minicbor/src/: array.rs  ast.rs  cbor_diag.rs  constants.rs  decode.rs  decode_combinators.rs  encode.rs  error.rs  lib.rs  map.rs  tag.rs  utils.rs
tps_minicbor/tests/: adversarial_bugfix.rs  decoder.rs  encode_decode_examples.rs  encoder.rs  rfc8949_decode_high_level.rs  rfc8949_decode_low_level.rs  rfc8949_encode.rs
