# Copyright © 2021-2022, Qualcomm Innovation Center, Inc. All rights reserved.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
# documentation files (the “Software”), to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
# to permit persons to whom the Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "tps_client_api"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy O'Donoghue<quic_jodonogh@quicinc.com"]
license = "MIT"
description = "Reference implementation of the GlobalPlatform Trusted Platform Services API"
homepage = "https://globalplatform.org"
repository = "https://github.com/GlobalPlatform/TPS-API-Reference-Implementations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TPS Client API is normally built `no_std` and does not require an allocator.
# Exception is when it is built for testing
[features]
trace = ["std"]
std = []

[dependencies]
thiserror = "^1.0.31"
once_cell = "1.14.0"
func_trace = "1.0.3"
spin = { version = "0.9.4", features = ["rwlock"] }
state = "0.5.3"
tps_client_common = { path = "../tps_client_common" }
tps_error = { path = "../tps_error" }
tps_connector = { path = "../tps_connector"}

[profile.release]
opt-level = 'z'
lto = true
